AX: role="spinbutton" elements are not adjustable on iOS https://bugs.webkit.org/show_bug.cgi?id=243768 rdar://problem/98426197

Reviewed by Andres Gonzalez.

role="spinbutton" components are not required to have accompanying buttons to adjust the value,
so they should be adjustable on their own too.

Example component can be found on:

https://www.w3.org/WAI/ARIA/apg/patterns/spinbutton/

* LayoutTests/accessibility/spinbutton-increment-decrement-expected.txt: Added.
* LayoutTests/accessibility/spinbutton-increment-decrement.html: Added.
* LayoutTests/platform/glib/TestExpectations: Disable new test.
* LayoutTests/platform/ios/accessibility/spinbutton-increment-decrement-expected.txt: Added.
* LayoutTests/platform/ios/TestExpectations: Enable new test.
* LayoutTests/platform/win/TestExpectations: Disable new test.
* Source/WebCore/accessibility/AccessibilityNodeObject.cpp:
(WebCore::AccessibilityNodeObject::alterRangeValue):
(WebCore::AccessibilityNodeObject::increment):
(WebCore::AccessibilityNodeObject::decrement):
(WebCore::AccessibilityNodeObject::postKeyboardKeysForValueChange):
(WebCore::AccessibilityNodeObject::setNodeValue):
(WebCore::AccessibilityNodeObject::changeValueByStep):
(WebCore::AccessibilityNodeObject::changeValueByPercent):
(WebCore::AccessibilityNodeObject::alterSliderValue):
Renamed to alterRangeValue since this logic now includes spinbuttons.
* Source/WebCore/accessibility/AccessibilityNodeObject.h:
Replace `bool increase` parameter with new `StepAction` enum class on
several functions.
* Source/WebCore/accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:
(-[WebAccessibilityObjectWrapper accessibilityTraits]):
Make AccessibilityRole::SpinButton elements adjustable.

Canonical link: https://commits.webkit.org/253403@main